# Special-Relativity-in-Financial-Modeling

./: .gitignore  AGENT.md  CLAUDE (2).md  CMakeLists.txt  HARDENING_REPORT.md  LOCKS.md  PROGRESS.md  README.md  lorentz_transform.cpp  srfm-viz.jsx  test_lorentz_transform.cpp  vcpkg.json
.github/workflows/: ci.yml
bench/: BENCHMARK_RESULTS.md  bench_beta_gamma.cpp
bench/regression/: baselines.json  bench_runner.cpp  run_regression.sh
build_audit/: CMakeCache.txt
ci/: run_asan.sh  run_msan.sh  run_tsan.sh  run_valgrind.sh
docs/: DASHBOARD.md  TECHNICAL_AUDIT.md
fuzz/: fuzz_beta_calculator.cpp  fuzz_engine.cpp  fuzz_geodesic.cpp  fuzz_manifold.cpp
include/srfm/: backtest.hpp  constants.hpp  data_loader.hpp  engine.hpp  geodesic_signal.hpp  geodesic_strategy.hpp  manifold.hpp  momentum.hpp  normalizer.hpp  tensor.hpp  types.hpp
include/srfm/engine/: n_asset_engine.hpp  stream_engine.hpp
include/srfm/manifold/: n_asset_interval.hpp
include/srfm/simd/: cpu_features.hpp  simd_dispatch.hpp
include/srfm/stream/: beta_calculator.hpp  coordinate_normalizer.hpp  lorentz_transform.hpp  signal_consumer.hpp  signal_processor.hpp  spacetime_manifold.hpp  spsc_ring.hpp  stream_signal.hpp  tick.hpp  tick_ingester.hpp  tick_source.hpp
include/srfm/tensor/: christoffel_n.hpp  geodesic_n.hpp  n_asset_manifold.hpp
paper/: Makefile  bibliography.bib  fix2.py  fix3.py  fix4.py  fix_empirical.py  fix_final.py  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  srfm.sty
paper/figures/: gen_all.py  gen_q1_regime_distributions.py
paper/sections/: 01_abstract.tex  02_introduction.tex  03_related_work.tex  04_framework.tex  05_implementation.tex  06_empirical.tex  06_empirical.tex_backup  07_open_questions.tex  08_conclusion.tex
scripts/: build_momentum.bat  build_momentum.ps1  build_momentum.sh  build_n_asset.ps1  build_n_asset.sh  build_simd.bat  build_stream.bat  build_stream.sh  compile_test.bat  fetch_eigen.ps1  mcp_bench.py
src/: lib.rs  main.cpp  main.rs  metrics.rs  metrics_server.rs  self_improve.rs  self_improve_loop.rs  stages.rs  web_api.rs  worker.rs
src/backtest/: backtester.cpp  geodesic_strategy.cpp  performance_metrics.cpp
src/beta_calculator/: beta_calculator.cpp  beta_calculator.hpp
src/config/: loader.rs  mod.rs  validation.rs  watcher.rs
src/coordination/: config.rs  mod.rs  monitor.rs  queue.rs  spawner.rs  task.rs  worker.rs
src/core/: data_loader.cpp  engine.cpp
src/distributed/: cluster.rs  config.rs  leader.rs  nats.rs  redis_dedup.rs
src/engine/: engine.cpp  engine.hpp  n_asset_engine.cpp  stream_engine.cpp
src/enhanced/: cache.rs  circuit_breaker.rs  priority.rs  rate_limit.rs  retry.rs
src/evolution/: search.rs
src/geodesic/: geodesic_solver.cpp  geodesic_solver.hpp
src/intelligence/: bridge.rs  feedback.rs  semantic_dedup.rs
src/lorentz/: beta_calculator.cpp  beta_calculator.hpp  lorentz_transform.cpp  lorentz_transform.hpp
src/manifold/: market_manifold.cpp  n_asset_interval.cpp  normalizer.cpp  spacetime_interval.cpp  spacetime_manifold.cpp  spacetime_manifold.hpp
src/momentum/: momentum.cpp  momentum.hpp  momentum_processor.cpp  relativistic_signal.cpp
src/routing/: config.rs  cost_tracker.rs  mod.rs  router.rs  scorer.rs
src/self_modify/: deployment.rs  discover.rs  docs.rs  gate.rs  memory.rs  mod.rs  task_gen.rs
src/self_tune/: actuator.rs  anomaly.rs  controller.rs  cost.rs  experiment.rs  helix_config_pusher.rs  helix_feedback.rs  helix_probe.rs  snapshot.rs  telemetry_bus.rs  wiring.rs
src/simd/: beta_avx2.cpp  beta_avx512.cpp  beta_scalar.cpp  gamma_avx2.cpp  gamma_avx512.cpp  gamma_scalar.cpp  simd_batch_detail.hpp  simd_dispatch.cpp
src/stream/: signal_consumer.cpp  signal_processor.cpp  tick_ingester.cpp
src/tensor/: christoffel.cpp  christoffel_n.cpp  geodesic.cpp  geodesic_n.cpp  geodesic_signal.cpp  metric_tensor.cpp  n_asset_manifold.cpp
src/tui/: app.rs  metrics.rs  ui.rs
src/tui/widgets/: circuit.rs  pipeline.rs
src/validation/: backtest_runner.cpp  regime_validator.cpp
test/property/: prop_christoffel_flat.cpp  prop_doppler_inverse.cpp  prop_geodesic_flat.cpp  prop_lorentz_identity.cpp  prop_rapidity_additivity.cpp  prop_velocity_subluminal.cpp
tests/: momentum_tests.rs
tests/backtest/: test_backtester.cpp  test_gamma_sizing.cpp  test_metrics_precision.cpp  test_performance_metrics.cpp
tests/integration/: test_full_pipeline.cpp
tests/lorentz/: test_beta_calculator.cpp  test_lorentz_transform.cpp  test_online_beta.cpp
tests/manifold/: test_market_manifold.cpp  test_normalizer.cpp  test_spacetime_interval.cpp
tests/momentum/: srfm_test.hpp  test_momentum.cpp  test_momentum_processor.cpp  test_relativistic_signal.cpp  test_simd.cpp
tests/n_asset/: srfm_test_n_asset.hpp  test_christoffel_n.cpp  test_geodesic_n.cpp  test_n_asset_engine.cpp  test_n_asset_interval.cpp  test_n_asset_manifold.cpp
tests/simd/: test_simd.cpp
tests/stream/: srfm_stream_test.hpp  test_beta_calculator.cpp  test_coordinate_normalizer.cpp  test_lorentz_manifold.cpp  test_pipeline_invariants.cpp  test_signal_chain.cpp  test_spsc_ring.cpp  test_spsc_stress.cpp  test_stream_engine.cpp  test_tick_validation.cpp
tests/tensor/: test_christoffel.cpp  test_geodesic.cpp  test_metric_tensor.cpp
tests/validation/: test_geodesic_signal.cpp  test_geodesic_strategy.cpp
validation/: Q1_RESULTS.md  Q1_RESULTS_RAW.csv  analyze_q1.py  backtest_comparison.py  fetch_data.py  generate_figures.py  requirements.txt  run_validation.py
validation/data/: AAPL_1m.csv  BTC_USD_1m.csv  GLD_1m.csv  GS_1m.csv  JPM_1m.csv  META_1m.csv  NVDA_1m.csv  QQQ_1m.csv  SPY_1m.csv  TSLA_1m.csv
validation/results/: AAPL_regime.csv  BTC_USD_regime.csv  GLD_regime.csv  GS_regime.csv  JPM_regime.csv  META_regime.csv  NVDA_regime.csv  QQQ_regime.csv  SPY_regime.csv  TSLA_regime.csv
validation/results/backtest/: AAPL_backtest.csv  BTC_USD_backtest.csv  (+8 more)
validation/validation/: Q1_RESULTS.md  Q1_RESULTS_RAW.csv
viz/: index.html  package-lock.json  package.json  vite.config.ts
viz/src/: App.tsx  index.css
(+27 files in other folders)
